# ducklake-polars

./: CHANGELOG.md  CLAUDE.md  DISCOVERY.md  GAP_ANALYSIS.md  PLAN.md  README.md  REFACTOR_PLAN.md  TEST_PARITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  tests.yml
.hypothesis/constants/: 02c08d120d559df9  226e9bb530372a32  44a50b67342f2835  46303fd74012b855  4b9673d6044607cd  59bb1d9fef89a03c  61f108b105422101  65f9e103c0247407  67b0a8ccf18bf5d2  6d90cc910a20f665  6e870c4b44967ce9  92f2cb29d61ebff2  946f15a67ee8f140  9fd5ea3701731e6d  a728e30f31749fa6  c847e38d01d3d478  da39a3ee5e6b4b0d  da58d106d36968d2  e62516fe40bf452d  e69688058c6e98bd  f885d07d8999020b
benchmarks/: README.md  bench_read_write.py  bench_streaming.py  profile_read.py  profile_read2.py
docs/: api.md  backends.md  compatibility.md  concurrency.md  index.md  object-storage.md  time-travel.md
examples/: tutorial.ipynb  tutorial_pandas.ipynb  tutorial_pandas.py  tutorial_pyspark.ipynb  tutorial_pyspark.py
src/ducklake_core/: __init__.py  _backend.py  _bootstrap.py  _catalog.py  _catalog_api.py  _exceptions.py  _migration.py  _schema.py  _storage.py  _writer.py
src/ducklake_pandas/: __init__.py  _catalog_api.py  _writer.py
src/ducklake_polars/: __init__.py  _backend.py  _catalog.py  _catalog_api.py  _dataset.py  _schema.py  _writer.py
src/ducklake_pyspark/: __init__.py  _ddl.py  _writer.py
tests/: conftest.py  test_add_files.py  test_backend.py  test_basic.py  test_bootstrap.py  test_case_insensitive.py  test_catalog_api.py  test_catalog_general.py  test_catalog_inspection.py  test_catalog_object.py  test_cdc.py  test_cleanup_files.py  test_cloud_storage.py  test_comments.py  test_compaction.py  test_compaction_advanced.py  test_compaction_parity.py  test_concurrent.py  test_default_expression.py  test_defaults.py  test_delete.py  test_deletion_inlining.py  test_duckdb_backend.py  test_edge_cases.py  test_encryption_unsupported.py  test_error_handling.py  test_field_id.py  test_field_id_mapping.py  test_inlined.py  test_interop.py  test_interop_compaction.py  test_macros.py  test_merge_adjacent_files.py  test_merge_clauses.py  test_migration.py  test_migration_v10.py  test_name_mapping_reads.py  test_occ.py  test_p2_gaps.py  test_parity_gaps.py  (+42 more)
tests_pandas/: conftest.py  helpers.py  test_add_files.py  test_basic.py  test_catalog_api.py  test_catalog_general.py  test_cdc.py  test_delete.py  test_inlined.py  test_interop.py  test_macros.py  test_maintenance.py  test_partition.py  test_partition_transforms.py  test_property.py  test_schema_evolution.py  test_set_option.py  test_stream_writer.py  test_tags.py  test_time_travel.py  test_types.py  test_update.py  test_write.py  test_write_alter.py  test_write_ddl.py  test_write_delete.py  test_write_inline.py  test_write_maintenance.py  test_write_merge.py  test_write_partition.py  test_write_update.py  test_write_views.py
